Closed Bug 1949363 Opened 1 year ago Closed 1 year ago

Crash in [@ mozilla::layers::NativeLayerRootWayland::Shutdown]

Categories

(Core :: Graphics: WebRender, defect, P5)

Firefox 137
x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
137 Branch
Tracking Status
firefox-esr128 --- unaffected
firefox135 --- unaffected
firefox136 --- unaffected
firefox137 --- fixed

People

(Reporter: greyxor, Assigned: stransky)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/5cdc4aa3-2c69-4f77-a853-f478d0250220

MOZ_CRASH Reason:

MOZ_DIAGNOSTIC_ASSERT(!mSurface->IsMapped()) (Can't shutdown with live WaylandSurface!)

Top 10 frames:

0  libxul.so  MOZ_CrashSequence(void*, long)  mfbt/Assertions.h:263
0  libxul.so  mozilla::layers::NativeLayerRootWayland::Shutdown()  gfx/layers/NativeLayerWayland.cpp:185
1  libxul.so  mozilla::widget::GtkCompositorWidget::~GtkCompositorWidget()  widget/gtk/GtkCompositorWidget.cpp:60
2  libxul.so  mozilla::widget::InProcessGtkCompositorWidget::~InProcessGtkCompositorWidget()  widget/gtk/InProcessGtkCompositorWidget.h:16
3  libxul.so  mozilla::widget::CompositorWidget::Release()  widget/CompositorWidget.h:90
3  libxul.so  mozilla::RefPtrTraits<mozilla::widget::CompositorWidget>::Release(mozilla::wi...  mfbt/RefPtr.h:49
3  libxul.so  RefPtr<mozilla::widget::CompositorWidget>::ConstRemovingRefPtrTraits<mozilla:...  mfbt/RefPtr.h:409
3  libxul.so  RefPtr<mozilla::widget::CompositorWidget>::assign_assuming_AddRef(mozilla::wi...  mfbt/RefPtr.h:68
3  libxul.so  RefPtr<mozilla::widget::CompositorWidget>::operator=(std::nullptr_t)  mfbt/RefPtr.h:180
3  libxul.so  mozilla::layers::InProcessCompositorSession::Shutdown()  gfx/ipc/InProcessCompositorSession.cpp:103
Keywords: regression
OS: Unspecified → Linux
Regressed by: 1938033
Hardware: Unspecified → x86_64

Disabled by default.

Priority: -- → P5

It's possible that compositor widget is deleted before WaylandSurface is fully unmapped so clear WaylandSurface in such case.

Assignee: nobody → stransky
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

Set release status flags based on info from the regressing bug 1938033

Crash Signature: [@ mozilla::layers::NativeLayerRootWayland::Shutdown ]
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/21b841b3fc24 [Wayland] Allow to remove NativeLayerRootWayland from live WaylandSurface r=emilio
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 137 Branch

I confirm this crash doesn't happen anymore, thanks

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: