Bug 1949363 [Wayland] Allow to remove NativeLayerRootWayland from live WaylandSurface r=emilio

It's possible that compositor widget is deleted before WaylandSurface is fully unmapped so clear WaylandSurface in such case.

Differential Revision: https://phabricator.services.mozilla.com/D238925